examples/invalid/projects/bad_data_profile_missing_payload_class/main.ns
use data FabricPlane;
use shader SurfaceShader;

mod cpu Main {
  fn main() {
    cpu_bind_core(0);
    cpu_window(320, 200, "bad_data_profile");

    let shader_vertex_budget: i64 = shader_profile_vertex_count("SurfaceShader");
    let shader_instance_budget: i64 = shader_profile_instance_count("SurfaceShader");
    let shader_packet_color_slot: i64 = shader_profile_packet_color_slot("SurfaceShader");
    let shader_packet_speed_slot: i64 = shader_profile_packet_speed_slot("SurfaceShader");
    let shader_packet_radius_slot: i64 = shader_profile_packet_radius_slot("SurfaceShader");
    let shader_packet_tag: i64 = shader_profile_packet_tag("SurfaceShader");
    let shader_material_mode: i64 = shader_profile_material_mode("SurfaceShader");
    let shader_pass_kind: i64 = shader_profile_pass_kind("SurfaceShader");
    let shader_packet_field_count: i64 = shader_profile_packet_field_count("SurfaceShader");

    let render_controls: i64 =
      shader_vertex_budget + shader_instance_budget + shader_packet_color_slot
      + shader_packet_speed_slot + shader_packet_radius_slot + shader_packet_tag
      + shader_material_mode + shader_pass_kind + shader_packet_field_count;

    let swapchain: Target = shader_profile_target("SurfaceShader");
    let main_view: Viewport = shader_profile_viewport("SurfaceShader");
    let lit_pipe: Pipeline = shader_profile_pipeline("SurfaceShader");
    let data_window_offset: i64 = data_profile_window_offset("FabricPlane");
    let data_uplink_len: i64 = data_profile_uplink_len("FabricPlane");
    let data_downlink_len: i64 = data_profile_downlink_len("FabricPlane");

    data_profile_bind_core("FabricPlane");
    let uplink_window: Window =
      data_immutable_window(render_controls, data_window_offset, data_uplink_len);
    link packet_out: Pipe<Window> = output uplink_window;
    let gpu_packet: Window = data_input_pipe(packet_out);

    let main_pass: Pass = shader_begin_pass(swapchain, lit_pipe, main_view);
    let frame: Frame =
      shader_draw_instanced(main_pass, gpu_packet, shader_vertex_budget, shader_instance_budget);

    let downlink_window: WindowMut =
      data_copy_window(frame, data_window_offset, data_downlink_len);
    link frame_out: Pipe<Window> = output downlink_window;
    let host_frame: Window = data_input_pipe(frame_out);

    cpu_present_frame(host_frame);
  }
}
